--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             </div>
             <audio controls hidden></audio>
         </div>
+        <div class="stopbtn">
+            <button class="stop">Stop</button>
+
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
